# webridge

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  pyproject.toml  webridge_init.md
notebooks/: scratch.ipynb
src/webridge/: __init__.py  _config.py  _logging.py  cli.py
src/webridge/discover/: __init__.py  ddgs_backend.py  searxng_backend.py  tavily_backend.py
src/webridge/extract/: html.py  pdf.py
src/webridge/fetch/: __init__.py  cache.py  dynamic.py  static.py
src/webridge/models/: __init__.py  page.py  search.py
tests/: conftest.py  test_cache.py  test_cli.py  test_discover_ddgs.py  test_fetch_dynamic.py  test_fetch_static.py
tests/fixtures/: empty_spa.html  sample_article.html
